# whiteboard-pal

./: .bazelrc  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  README.md  WORKSPACE  build.rs  build_tf.sh  cmake_clean.sh  et --soft HEAD~1  install_cuda_ubuntu_20.04.sh  install_opencv.sh  install_tf_c_api.sh  mediapipe_gestures.py  whiteboard_pal
FingerDetection/: FingerDetection.cpp  FingerDetection.py
include/whiteboard_pal/: main.hpp
mediapipe/graphs/whiteboard_pal/: BUILD  whiteboard_pal.pbtxt
mediapipe/graphs/whiteboard_pal/calculators/: BUILD  canvas.cc  gesture.cc
mediapipe/mediapipe/modules/whiteboard-pal/: BUILD  canvas.cc
src/: BUILD  inputs.cpp  main.cpp  main.hpp  main.rs  model_fns.cpp  models.cpp
src/model/: saved_model.pb
src/model/variables/: variables.data-00000-of-00001  variables.index
whiteboard-pal/: init_device.sh  install_cuda_ubuntu_20.04.sh  status.txt
whiteboard-pal/src/: inputs.cpp  main.cpp
whiteboard-pal/src/model/: saved_model.pb
